--- a/src/style.scss
+++ b/src/style.scss
@@ -1,5 +1,5 @@
 body {
-  background-color: #666;
+  background-color: #ddd;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -128,6 +128,9 @@ code {
   left: 50%;
   translate: -50% -50%;
   display: flex;
+  border: 5px solid black;
+  border-radius: 35px;
+  overflow: hidden;
 
   #card{
     background-color: white;
