--- a/src/style.scss
+++ b/src/style.scss
@@ -127,19 +127,44 @@ code {
   top: 45%;
   left: 50%;
   translate: -50% -50%;
-  display: flex;
-  border: 5px solid black;
-  border-radius: 35px;
-  overflow: hidden;
+  perspective: 600px;
 
   #card{
-    background-color: white;
     width: 100%;
-    padding: 30px;
+    height: 100%;
+    transition: transform 1s;
+    transform-style: preserve-3d;
+    transform-origin: center;
+
+    .card-front{
+      position: absolute;
+      border: 5px solid black;
+      border-radius: 35px;
+      background-color: white;
+      padding: 30px;
+      height: 100%;
+      width: 100%;
+      backface-visibility: hidden;
+    }
+
+    .card-back{
+      position: absolute;
+      border: 5px solid black;
+      border-radius: 35px;
+      background-color: white;
+      padding: 30px;
+      height: 100%;
+      width: 100%;
+      backface-visibility: hidden;
+      transform: rotateY(180deg);
+    }
 
     h1{
       margin: 0px;
     }
+  }
+  #card.is_flipped{
+    transform: rotateY(180deg);
   }
 }
 #arrow-div {
